--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -35,4 +35,52 @@
     url     = {https://www.json.org/json-en.html}
 }
 
+@online{site:scrum,
+    title   = {SCRUM},
+    url     = {https://www.scrum.org/resources/what-is-scrum}
+}
 
+@online{site:zextras,
+    title   = {Zextras},
+    url     = {https://www.zextras.com/}
+}
+
+@online{site:mockito,
+    title   = {Mockito},
+    url     = {https://site.mockito.org/}
+}
+
+@online{site:guice,
+    title   = {Guice},
+    url     = {https://github.com/google/guice/wiki}
+}
+
+@online{site:provisioning,
+    title   = {Provisioning},
+    url     = {https://support.okta.com/help/s/article/Provisioning-Concepts-and-Methods}
+}
+
+@online{site:jira,
+    title   = {Jira},
+    url     = {https://www.atlassian.com/software/jira}
+}
+
+@online{site:confluence,
+    title   = {Confluence},
+    url     = {https://www.atlassian.com/software/confluence}
+}
+
+@online{site:openid,
+    title   = {OpenID},
+    url     = {https://openid.net/developers/specs/}
+}
+
+@online{site:OAuth,
+    title   = {oauth},
+    url     = {https://oauth.net/2/}
+}
+
+@online{site:jenkins,
+    title   = {Jenkins},
+    url     = {https://jenkins.io/}
+}
