--- a/src/capitoli/capitolo-2.tex
+++ b/src/capitoli/capitolo-2.tex
@@ -117,7 +117,7 @@
         \label{fig: Docker workflow}
     \end{figure}
 
-\section{Aspettative aziendali}
+\section{Aspettative aziendali}\label{sec:aspettative_aziendali}
     %Descrizione degli output che l'azienda si aspettava da questo stage
     Al termine delle 304 ore previste per il completamento dello stage, l'azienda si aspettava di avere almeno l'autenticazione base funzionante che facesse uso del protocollo scelto, in modo da autenticare gli utenti su \gls{zcsg} tramite l'\gls{idpg} \gls{okta}. Come già descritto in precedenza però, la parte interessante di questo progetto era l'aggiunta di alcune funzionalità personalizzate ad un sistema di autenticazione standard. Per questo motivo dopo aver concluso l'attività di ricerca sui protocolli, descritta nel paragrafo \secref{sec:att_analisi}, ho discusso, insieme al \textit{team} e al \textit{Project Manager}, i requsiti specifici da implementare. Ciò è stato utile perché al momento della stesura del piano di lavoro, alcuni di essi non potevano essermi chiari a causa della mancanza di contesto riguardante l'ambiente \gls{zcsg}. Gli obiettivi stabiliti erano suddivisi in due gruppi. In ordine di priorità: \textbf{obbligatori} e \textbf{desiderabili}.
     \paragraph{Obiettivi obbligatori}
@@ -130,13 +130,13 @@
         \item \textit{\gls{prov}};
         \item Importazione dei dati dell'utente di \gls{okta} su \gls{zcsg};
         \item Flusso di autenticazione a partire sia dall'\gls{idpg} sia da \gls{zcsg};
-        \item Controllo delle classi di servizio di \gls{zcsg} tramite l'\gls{idpg};
-        \item Gestione delle liste di distribuzione di \gls{zcsg} tramite l'\gls{idpg};
+        \item Controllo della \gls{cosg} di \gls{zcsg} tramite l'\gls{idpg};
+        \item Gestione delle \gls{distlistg} di \gls{zcsg} tramite l'\gls{idpg};
         \item Autenticazione a due fattori;
         \item Integrazione con \textit{WebAuthn}\footnote{\url{https://www.w3.org/TR/webauthn-2/}}
     \end{itemize}
 
-\section{Aspettative personali}
+\section{Aspettative personali}\label{sec:aspettative_personali}
 Nel corso della laurea triennale ho sempre avuto idea di ciò che volessi fare del punto di vista professionale una volta finito gli studi. Tuttavia, prima di specializzarmi in un determinato ambito, ho deciso di esplorare altre realtà sfruttando l'opportunità di svolgere un'attività stage. Ciò che mi interessava quindi, era osservare in prima persona il modo di lavorare di professionisti, l'utilizzo di tecnologie (sia conosciute in ambito accademico sia per me nuove) a livello professionale e apprendere il più possibile sul mondo del lavoro. Inoltre avevo intezione di trovare un progetto di stage che potesse portare del valore concreto all'azienda e soprattutto avere la possibilità di completarlo nell'arco dei due mesi disponibili, invece di lavorare su prototipi usa e getta.
 Per poter avere un'idea dell'offerta dell'industria informatica attuale, ho partecipato all'evento \textit{Stage-IT} \footnote{\url{http://informatica.math.unipd.it/laurea/stageit.html}} organizzato dell'Università degli studi di Padova, pensato per mettere in contatto gli studenti con la realtà lavorativa. Durante l'evento ho sostenuto diversi colloqui con aziende che spesso proponevano dei progetti incentrati sull'esplorare una nuova tecnologia ed eventualmente sviluppare un prototipo. Poiché, come già accennato, il mio obiettivo era quello di portare a termine un prodotto finito e utilizzabile, ho continuato la mia ricerca anche dopo lo svolgersi dell'evento. Ho contattato altre aziende e sostenuto altri colloqui finché non ho trovato \textbf{Zextras}, che mi ha convinto fin da subito con il progetto proposto e con l'ambiente lavorativo presentato. Quindi i miei obiettivi da raggiungere con un progetto di stage erano:
 \begin{itemize}
