--- a/src/glossario.tex
+++ b/src/glossario.tex
@@ -8,7 +8,7 @@
     name=\glslink{zcsg}{Zimbra Collaboration},
     text=Zimbra,
     sort=zimbra,
-    description={software collaborativo che offre servizi come la posta elettronica e calendario condiviso. \'E possibile estenderlo con nuove funzionalità tramite meccanismi chiamati \textbf{Zimlet}}
+    description={\textit{Software} collaborativo che offre servizi come posta elettronica e calendario condiviso. \'E possibile estenderlo con nuove funzionalità tramite meccanismi chiamati \textit{Zimlet}, simili al concetto di \gls{pluging}}
 }
 
 \newglossaryentry{spg}
@@ -16,7 +16,7 @@
     name=\glslink{sp}{Service Provider},
     text=service provider,
     sort=service provider,
-    description={Un \textit{service provider} ed è un sistema che fornisce un servizio a degli utenti. Lo si può identificare come un sito web che eroga un certo servizio}
+    description={\'E un sistema che fornisce un servizio a degli utenti. Lo si può intendere come un sito \textit{web} che eroga un certo servizio}
 }
 
 \newglossaryentry{idpg}
@@ -40,7 +40,7 @@
     name=\glslink{xml}{XML},
     text=XML,
     sort=xml,
-    description={Linguaggio di \textit{\textbf{Markup}} che consente la definizione di \textbf{metadati}}
+    description={Linguaggio di \textit{Markup} che consente la definizione di metadati}
 }
 
 \newglossaryentry{samlg}
@@ -48,7 +48,7 @@
     name=\glslink{saml}{SAML (Secuity Assertion Markup Language)},
     text=SAML,
     sort=saml,
-    description={\'E un protocollo bastato su \gls{xmlg} che permette lo scambio di messaggi per effettuare autenticazione e autorizzazione tra domini distinti. Tipicamente gli attori del procollo sono un \gls{idpg} che fornisce l'identità dell'utente da autenticare e un \gls{spg} che fornisce il servizio a cui l'utente ha richiesto l'accesso}
+    description={\'E un protocollo bastato su \gls{xmlg} che permette lo scambio di messaggi per effettuare autenticazione e autorizzazione tra domini distinti. Tipicamente gli attori del procollo sono un \gls{idpg} che fornisce l'identità dell'utente da autenticare e un \gls{spg} che fornisce il servizio a cui l'utente ha richiesto l'accesso o una risorsa}
 }
 
 \newglossaryentry{ssog}
@@ -56,7 +56,7 @@
     name=\glslink{sso}{SSO (Single Sign-On)},
     text=Single Sign-On,
     sort=sso,
-    description={Si tratta di un sistema di autenticazione che permette ad un utente di effettuare un'unica autenticazione, valida per più servizi e/o risorse ai quali è abilitato. Questo permette all'utente di avere un'unica credenziale valida per più servizi indipendenti}
+    description={Si tratta di un sistema di autenticazione che permette ad un utente di effettuare un'unica autenticazione, valida per più servizi e/o risorse che lo supportano. Questo permette all'utente di avere un'unica credenziale valida per più servizi indipendenti}
 }
 
 \newglossaryentry{samlass}
@@ -72,12 +72,12 @@
     name=\glslink{crud}{CRUD},
     text=CRUD,
     sort=crud,
-    description={Questo acronimo viene spesso usato in ambito di \textit{\textbf{database management}} e indica:
+    description={Questo acronimo viene spesso usato in ambito di \textit{database management} e indica:
     \begin{itemize}
         \item \textit{\textbf{Create}}: creazione di un utente;
         \item \textit{\textbf{Read}}: richiesta attributi di un utente;
         \item \textit{\textbf{Update}}: aggiornamento attributi di un utente;
-        \item \textit{\textbf{Delete}}: non si parla di una cancellazione vera e propria di un utente ma di \textit{\textbf{deprovisioning}}, ovvero una disabilitazione dell'\textit{account} di quest'ultimo o di un cambio di permessi
+        \item \textit{\textbf{Delete}}: non si parla di una cancellazione vera e propria di un utente ma di \textit{deprovisioning}, ovvero una disabilitazione dell'\textit{account} di quest'ultimo o di un cambio di permessi
     \end{itemize}}
 }
 
@@ -86,7 +86,7 @@
     name=\glslink{prov}{Provisioning},
     text=Provisioning,
     sort=provisioning,
-    description={Con il termine \textit{\textbf{provisioning}} si intende, generalmente, la gestione degli utenti. Questo termine include un insieme di funzionalità riassunte dall'acronimo \gls{crudg}}
+    description={Con il termine \textit{provisioning} si intende, generalmente, la gestione degli utenti. Questo termine include un insieme di funzionalità riassunte dall'acronimo \gls{crudg}}
 }
 
 \newglossaryentry{opensg}
@@ -94,7 +94,7 @@
     name=\glslink{opensg}{Open Source},
     text=open source,
     sort=open source,
-    description={Con il termine \textit{\textbf{open source}} si fa riferimento ad un \textit{software} la cui lincenza permette di utilizzarlo, modificarlo e redistribuirlo}
+    description={Con il termine \textit{open source} si fa riferimento ad un \textit{software} la cui lincenza permette di utilizzarlo, modificarlo e redistribuirlo}
 }
 
 \newglossaryentry{closedg}
@@ -102,7 +102,7 @@
     name=\glslink{closedg}{Closed Source},
     text=closed source,
     sort=closed source,
-    description={Con il termine \textit{\textbf{closed source}} si fa riferimento ad un software proprietario, quindi non disponibile pubblicamente}
+    description={Con questo termine si fa riferimento ad un \textit{software} proprietario utilizzabile sotto certe condizioni. Di solito non è possibile modificarlo, condividerlo e ridistribuirlo}
 }
 
 \newglossaryentry{pluging}
@@ -118,7 +118,7 @@
     name=\glslink{backupg}{Backup},
     text=backup,
     sort=backup,
-    description={Quando si parla di \textit{backup}, si fa riferimento al processo di duplicazione di dati su più supporti (fisici o cloud) al fine di poterli recuperare in caso di perdita inattesa}
+    description={Quando si parla di \textit{backup}, si fa riferimento al processo di duplicazione di dati su più supporti (fisici o \textit{cloud}) al fine di poterli recuperare in caso di perdita inattesa}
 }
 
 \newglossaryentry{realtimeg}
@@ -134,7 +134,7 @@
     name=\glslink{userexpg}{User experience},
     text=user experience,
     sort=user experience,
-    description={L'esperienza che manifesta l'utente, nell'interagire con un certo prodotto, sistema o servizio}
+    description={Il \textit{feedback} manifestato dall'utente nell'interagire con un certo prodotto, sistema o servizio}
 }
 
 \newglossaryentry{agileg}
@@ -158,15 +158,15 @@
     name=\glslink{taskg}{Task},
     text=task,
     sort=task,
-    description={Incarico di piccole dimensione assegnato ad un soggetto che dovrà portarlo a termine}
+    description={Incarico di piccole dimensioni assegnato al soggetto che dovrà portarlo a termine}
 }
 
 \newglossaryentry{wysiwygg}
 {
-    name=\glslink{wysiwygg}{WYSIWYG},
+    name=\glslink{wysiwygg}{WYSIWYG (What You See Is What You Get)},
     text=WYSIWYG,
     sort=wysiwyg,
-    description={Sta per "\textit{What You See Is What You Get}" e si riferisce ad una tipologia di \textit{editor} di testo in grado di mostrare in tempo reale, durante la scrittura, quale sarà l'aspetto finale del documento}
+    description={Si riferisce ad una tipologia di \textit{editor} di testo in grado di mostrare in tempo reale, durante la scrittura, quale sarà l'aspetto finale del documento}
 }
 
 \newglossaryentry{repositoryg}
@@ -195,10 +195,10 @@
 
 \newglossaryentry{itsg}
 {
-    name=\glslink{itsg}{Issue Tracing System},
+    name=\glslink{itsg}{Issue Tracking System},
     text=issue tracking system,
     sort=issue tracking system,
-    description={Software che permette di gestire in maniera ordinata un insieme di issue, ovvero dei \textit{\gls{taskg}} da svolgere. Tipicamente viene utilizzato in ambito collaborativo in quanto permette di tenere traccia delle \textit{issue} risolte da tutti i membri del \textit{team}}
+    description={\textit{Software} che permette di gestire in maniera ordinata un insieme di \textit{issue}, ovvero dei \gls{taskg} da svolgere. Tipicamente viene utilizzato in ambito collaborativo in quanto permette di tenere traccia delle \textit{issue} portate a termine da tutti i membri del \textit{team}}
 }
 
 \newglossaryentry{cig}
@@ -206,7 +206,7 @@
     name=\glslink{cig}{Continuous Integration},
     text=continuous integration,
     sort=continuous integration,
-    description={Pratica nell'ambito dell'ingeneria del \textit{software} che consiste nell'integrazione frequente del lavoro svolto negli ambienti in locale degli sviluppatori verso l'ambiente condiviso, ovvero il \textit{\gls{repositoryg}} in remoto}
+    description={Pratica nell'ambito dell'ingeneria del \textit{software} che consiste nell'integrazione frequente del lavoro svolto negli ambienti locali degli sviluppatori verso l'ambiente condiviso, ovvero il \textit{\gls{repositoryg}} in remoto}
 }
 
 \newglossaryentry{cdg}
@@ -246,7 +246,7 @@
     name=\glslink{containerg}{Container},
     text=container,
     sort=container,
-    description={Dn \textit{Docker} \textit{container} è un'unità \textit{software} che contiene un ambiente di esecuzione completo di librerie, dipendenze e configurazioni che è in grado di essere eseguito in modo sicuro e deterministico in altri ambienti \textit{Docker} ospitati su diverse macchine}
+    description={Un \textit{Docker} \textit{container} è un'unità \textit{software} che contiene un ambiente di esecuzione completo di librerie, dipendenze e configurazioni che è in grado di essere eseguito in modo sicuro e deterministico in altri ambienti \textit{Docker} ospitati su diverse macchine}
 }
 
 \newglossaryentry{cosg}
@@ -270,7 +270,7 @@
     name=\glslink{restg}{REST API},
     text=REST API,
     sort=rest api,
-    description={Sono una tipologia di \textit{API} che utilizzano richieste \textit{HTTP} per lo scambio di informazioni}
+    description={Sono una tipologia di \gls{apig} che utilizzano richieste \gls{httpg} per lo scambio di informazioni}
 }
 
 \newglossaryentry{javadocg}
@@ -286,7 +286,7 @@
     name=\glslink{openidg}{OpenID},
     text=OpenID,
     sort=openid,
-    description={\'E un protocollo di autenticazione di autenticazione che permette di verificare l'identità di un utente, tramite l'ausilio di un \gls{idpg} che scambia informazioni con l'\gls{spg} nelle stesse modalità di \gls{restg}. In particolare, le informazioni riguardanti l'autenticazione di un utente, sono gestite tramite un \textit{JSON Web Token}\footnote{https://jwt.io/}}
+    description={\'E un protocollo di autenticazione che permette di verificare l'identità di un utente tramite l'ausilio di un \gls{idpg} che scambia informazioni con il\gls{spg} nelle stesse modalità di una \gls{restg}. In particolare, le informazioni riguardanti l'autenticazione di un utente, sono gestite tramite un \gls{jsong} \textit{Web Token}\footnote{https://jwt.io/}}
 }
 
 \newglossaryentry{xmlschemag}
@@ -294,7 +294,7 @@
     name=\glslink{xmlschemag}{XML-Schema},
     text=XML-Schema,
     sort=xml schema,
-    description={Rappresenta la definizione della struttura di un particolare tipo di documento \gls{xmlg}. Tutti i documenti che utilizzano un certo \textit{schema} devono adeguarsi alle regole in esso definito}
+    description={Rappresenta la definizione della struttura di un particolare documento \gls{xmlg}. Tutti i documenti che utilizzano un certo \textit{schema} devono adeguarsi alle regole in esso definito}
 }
 
 \newglossaryentry{oauthg}
@@ -310,7 +310,7 @@
     name=\glslink{endpointg}{Endpoint},
     text=endpoint,
     sort=endpoint,
-    description={L'\textit{endpoint} è un \textit{URL} sul quale è possibile raggiungere un servizio}
+    description={L'\textit{endpoint} è un \textit{URL} tramite il quale è possibile raggiungere un servizio}
 }
 
 \newglossaryentry{jsong}
@@ -318,7 +318,7 @@
     name=\glslink{jsong}{JSON (JavaScript Object Notation)},
     text=JSON,
     sort=json,
-    description={\'E uno \textit{standard} che definisce un formato per \textit{file} che permette di rappresentare oggetti composti da coppie chiave-valore ed \textit{array}. Questo formato è molto utilizzato nello scambio di dati \textit{client}/\textit{server} e viene spesso preferito al formato \gls{xmlg} essendo meno verboso}
+    description={\'E uno \textit{standard} che definisce un formato di \textit{file} che permette di rappresentare oggetti composti da coppie chiave-valore ed \textit{array}. Questo formato è molto utilizzato nello scambio di dati tra \textit{client} e \textit{server} e viene spesso preferito al formato \gls{xmlg}, il quale risulta più verboso}
 }
 
 \newglossaryentry{parsingg}
@@ -342,7 +342,7 @@
     name=\glslink{libg}{Libreria},
     text=libreria,
     sort=libreria,
-    description={In informatica, una libreria è un insieme di funzioni, metodi e strutture dati che possono essere incluse in un altro software rispettando opportune condizioni}
+    description={In informatica, una libreria è un insieme di funzioni, metodi e strutture dati che possono essere incluse in un altro modulo \textit{software} rispettando opportune precondizioni}
 }
 
 \newglossaryentry{httpg}
@@ -350,7 +350,7 @@
     name=\glslink{httpg}{HTTP (Hypertext Transfer Protocol)},
     text=HTTP,
     sort=http,
-    description={Protocollo di applicazione che sta alla base dello scambio di informazioni tra \textit{client} e \textit{server} all'interno dei servizi \textit{web}}
+    description={Protocollo di applicazione alla base dello scambio di informazioni tra \textit{client} e \textit{server} all'interno dei servizi \textit{web}}
 }
 
 \newglossaryentry{soapg}
@@ -358,7 +358,7 @@
     name=\glslink{soapg}{SOAP (Simple Object Access Protocol)},
     text=SOAP,
     sort=soap,
-    description={Protocollo per lo scambio di messaggi tra componenti \textit{software}. L'idea risiede nello strutturare questi messaggi secondo il paradigma della programmazione ad oggetti}
+    description={Protocollo per lo scambio di messaggi tra componenti \textit{software}. L'idea risiede nello strutturare i messaggi secondo il paradigma della programmazione ad oggetti}
 }
 
 \newglossaryentry{apig}
@@ -366,7 +366,7 @@
     name=\glslink{apig}{API (Application Programming Interface)},
     text=API,
     sort=api,
-    description={Nell'ambito dello sviluppo \textit{software} si intende un insieme di procedure, opportunamente organizzate, che risolvono un determinato problema. Spesso si usa questo termine per rifersi alle librerie offerta da un linguaggio di programmazione}
+    description={Nell'ambito dello sviluppo \textit{software} si intende un insieme di procedure, opportunamente organizzate, che risolvono un determinato problema. Spesso si usa questo termine per rifersi alle librerie offerte da un linguaggio di programmazione}
 }
 
 \newglossaryentry{depinjg}
@@ -374,7 +374,7 @@
     name=\glslink{depinjg}{Dependency Injection},
     text=dependency injection,
     sort=dependency injection,
-    description={In ingegneria del software è una tecnica nella quale un oggetto si occupa di fornire tuttle le dipendenze necessarie ad un altro oggetto. Viene utilizzato per semplificare l'attività di \textit{test} sul \textit{software}}
+    description={In ingegneria del \textit{software} è una tecnica nella quale un oggetto si occupa di fornire tuttle le dipendenze necessarie ad un altro oggetto. Viene utilizzato per semplificare l'attività di \textit{test} sul \textit{software}}
 }
 
 %**************************************************************
