--- a/src/inizio-fine/ringraziamenti.tex
+++ b/src/inizio-fine/ringraziamenti.tex
@@ -9,14 +9,6 @@
 \phantomsection
 \pdfbookmark{Ringraziamenti}{ringraziamenti}
 
-\begin{flushright}{
-	\slshape    
-	``Life is really simple, but we insist on making it complicated''} \\ 
-	\medskip
-    --- Confucius
-\end{flushright}
-
-
 \bigskip
 
 \begingroup
@@ -26,14 +18,17 @@
 
 \chapter*{Ringraziamenti}
 
-\noindent \textit{Innanzitutto, vorrei esprimere la mia gratitudine al Prof. NomeDelProfessore, relatore della mia tesi, per l'aiuto e il sostegno fornitomi durante la stesura del lavoro.}\\
+\noindent \textit{Innanzitutto, vorrei esprimere la mia gratitudine al Prof. Tullio Vardanega, relatore della mia tesi, per l'aiuto e il sostegno fornitomi durante la stesura del lavoro.}\\
 
-\noindent \textit{Desidero ringraziare con affetto i miei genitori per il sostegno, il grande aiuto e per essermi stati vicini in ogni momento durante gli anni di studio.}\\
+\noindent \textit{Desidero ringraziare con affetto la mia famiglia per il sostegno, il grande aiuto e per essermi stati vicini in ogni momento durante gli anni di studio.}\\
 
-\noindent \textit{Ho desiderio di ringraziare poi i miei amici per tutti i bellissimi anni passati insieme e le mille avventure vissute.}\\
+\noindent \textit{Un sentito rigraziamento i miei amici per le esperienze vissute durante questi anni. In particolar modo Andrea, Michele e Riccardo. Ringrazio inoltre le persone con cui ho avuto modo di condividere il percorso universitario.}\\
+
+\noindent \textit{Vorrei infine ringraziare Zextras per l'opportunità e per la professionalità dimostrata. Ringrazio il team The Lucky Gunslingers per avermi guidato durante tutto il corso del progetto.}\\
+
 \bigskip
 
-\noindent\textit{\myLocation, \myTime}
+\noindent\textit{\myLocation, Febbraio 2020}
 \hfill \myName
 
 \endgroup
