--- a/src/main.tex
+++ b/src/main.tex
@@ -119,7 +119,7 @@
 \frontmatter
 \input{inizio-fine/frontespizio}
 \input{inizio-fine/colophon}
-\input{inizio-fine/dedica}
+\input{inizio-fine/ringraziamenti}
 \input{inizio-fine/sommario}
 \input{inizio-fine/indici}
 \cleardoublepage
