--- a/src/inizio-fine/ringraziamenti.tex
+++ b/src/inizio-fine/ringraziamenti.tex
@@ -22,7 +22,7 @@
 
 \noindent \textit{Desidero ringraziare con affetto la mia famiglia per il sostegno, il grande aiuto e per essermi stati vicini in ogni momento durante gli anni di studio.}\\
 
-\noindent \textit{Un sentito rigraziamento i miei amici per le esperienze vissute durante questi anni. In particolar modo Andrea, Michele e Riccardo. Ringrazio inoltre le persone con cui ho avuto modo di condividere il percorso universitario.}\\
+\noindent \textit{Ringrazio i miei amici per le esperienze vissute durante questi anni. In particolar modo Andrea, Michele e Riccardo. Ringrazio inoltre le persone con cui ho avuto modo di condividere il percorso universitario.}\\
 
 \noindent \textit{Vorrei infine ringraziare Zextras per l'opportunità e per la professionalità dimostrata. Ringrazio il team The Lucky Gunslingers per avermi guidato durante tutto il corso del progetto.}\\
 
